[project]
name = "vision_code_crew"
version = "0.1.0"
description = "Vision_code_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
vision_code_crew = "vision_code_crew.main:run"
run_crew = "vision_code_crew.main:run"
train = "vision_code_crew.main:train"
replay = "vision_code_crew.main:replay"
test = "vision_code_crew.main:test"
run_with_trigger = "vision_code_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
